<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/result_ini"
        style="@style/tvResult" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:columnCount="5"
        android:rowCount="5">

        <Button
            android:id="@+id/buttonMPlus"
            style="@style/controlButton"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/ctrl_mplus" />

        <Button
            android:id="@+id/buttonM"
            style="@style/controlButton"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/ctrl_m" />

        <Button
            android:id="@+id/buttonC"
            style="@style/controlButton"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/ctrl_c" />

        <Button
            android:id="@+id/buttonCE"
            style="@style/controlButton"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/ctrl_ce" />

        <Button
            android:id="@+id/buttonPlus"
            style="@style/basicOpButtons"
            android:layout_row="0"
            android:layout_column="4"
            android:text="@string/op_plus" />

        <Button
            android:id="@+id/button9"
            style="@style/numberButtons"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/number_9" />

        <Button
            android:id="@+id/button8"
            style="@style/numberButtons"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/number_8" />

        <Button
            android:id="@+id/button7"
            style="@style/numberButtons"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/number_7" />

        <Button
            android:id="@+id/buttonPot"
            style="@style/opButtons"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/op_pow"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonMinus"
            style="@style/basicOpButtons"
            android:layout_row="1"
            android:layout_column="4"
            android:text="@string/op_minus" />

        <Button
            android:id="@+id/button6"
            style="@style/numberButtons"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/number_6" />

        <Button
            android:id="@+id/button5"
            style="@style/numberButtons"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/number_5" />

        <Button
            android:id="@+id/button4"
            style="@style/numberButtons"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/number_4" />

        <Button
            android:id="@+id/buttonRaiz"
            style="@style/opButtons"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/op_sqrt"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonMult"
            style="@style/basicOpButtons"
            android:layout_row="2"
            android:layout_column="4"
            android:text="@string/op_mult" />

        <Button
            android:id="@+id/button3"
            style="@style/numberButtons"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/number_3" />

        <Button
            android:id="@+id/button2"
            style="@style/numberButtons"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/number_2" />

        <Button
            android:id="@+id/button1"
            style="@style/numberButtons"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/number_1" />

        <Button
            android:id="@+id/buttonPorc"
            style="@style/opButtons"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/op_porc" />

        <Button
            android:id="@+id/buttonDiv"
            style="@style/basicOpButtons"
            android:layout_row="3"
            android:layout_column="4"
            android:text="@string/op_div" />

        <Button
            android:id="@+id/button0"
            style="@style/numberButtons"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/number_0" />

        <Button
            android:id="@+id/buttonComma"
            style="@style/numberButtons"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/comma" />

        <Button
            android:id="@+id/buttonPlusMinus"
            style="@style/opButtons"
            android:layout_row="4"
            android:layout_column="2"
            android:text="@string/op_neg" />

        <Button
            android:id="@+id/buttonOff"
            style="@style/offButton"
            android:layout_row="4"
            android:layout_column="3"
            android:text="@string/off" />

        <Button
            android:id="@+id/buttonEquals"
            style="@style/basicOpButtons"
            android:layout_row="4"
            android:layout_column="4"
            android:text="@string/op_equals" />
    </GridLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3" />

</LinearLayout>